--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expressportfoliosite",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -13,5 +13,23 @@
     "express": "~4.14.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
-  }
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ahmmdd/COMP308Assignment1.git"
+  },
+  "keywords": [
+    "Express",
+    "EJS",
+    "JS"
+  ],
+  "author": "Mohammed Juned Ahmed",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ahmmdd/COMP308Assignment1/issues"
+  },
+  "homepage": "https://github.com/ahmmdd/COMP308Assignment1#readme",
+  "description": ""
 }
