--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "morgan": "~1.7.0",
+    "nodemailer": "^3.0.2",
     "nodemon": "^1.11.0",
+    "sendmail": "^1.1.1",
     "serve-favicon": "~2.3.0"
   },
   "main": "app.js",
